Regression: Graph Editor handle highlighting not working correctly #112144

Closed
opened 2023-09-08 15:13:04 +02:00 by Christoph Lendenfeld · 2 comments

System Information
Operating system: Linux Mint
Graphics card: RTX 3070

Blender Version
Broken: main
Worked: 3.0.1

Short description of error
When selecting the right handle of a keyframe, the left line of the handle will be highlighted instead of the right line
image

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  • Open the file. The handle should already be selected
  • note the difference in highlighting when selecting the key and the right handle
**System Information** Operating system: Linux Mint Graphics card: RTX 3070 **Blender Version** Broken: main Worked: 3.0.1 **Short description of error** When selecting the right handle of a keyframe, the left line of the handle will be highlighted instead of the right line ![image](/attachments/944b607a-17ad-4d36-9ee2-b459a552df2e) **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). * Open the file. The handle should already be selected * note the difference in highlighting when selecting the key and the right handle
Christoph Lendenfeld added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-08 15:13:05 +02:00
Iliya Katushenock changed title from Graph Editor handle highlighting not working correctly to Regression: Graph Editor handle highlighting not working correctly 2023-09-08 15:15:13 +02:00
Iliya Katushenock added the
Interest
Animation & Rigging
label 2023-09-08 15:15:17 +02:00
Member

Can confirm

Can confirm
Member

Got a fix, will post PR shortly

Got a fix, will post PR shortly
Philipp Oeser self-assigned this 2023-09-11 09:51:27 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-11 15:36:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112144
No description provided.