Fix #112144: Graph Editor handle highlighting not working correctly

Mistake in 7c48196056c88c17c551e3177ef7b6f276f01d77.

Second handle was always drawn with positions of the first handle (when
it was highlighted).

Should be good for 3.6/3.3 LTS.

Pull Request: https://projects.blender.org/blender/blender/pulls/112219